--- a/static/css/Patient.css
+++ b/static/css/Patient.css
@@ -1,7 +1,7 @@
 body{
-    background-image: url('/static/images/bg.jpg');
+    background-image: url('/static/images/medicine.jpg');
+    background-repeat: no-repeat;
 }
 h1{
-    color: darkcyan;
     text-align: center;
 }
